# enki

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  justfile
.github/workflows/: ci.yml  release.yml
crates/acp/: Cargo.toml
crates/acp/src/: client.rs  lib.rs  manager.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: doctor.rs  exec.rs  history.rs  init.rs  mcp.rs  mod.rs  project.rs  run.rs  status.rs  stop.rs  task.rs
crates/cli/src/commands/mcp/: handlers.rs  mod.rs  tools.rs
crates/cli/src/coordinator/: events.rs  init.rs  merges.rs  mod.rs  prompts.rs  session.rs  sidecar.rs  spawning.rs  tracker.rs  workers.rs
crates/cli/src/tui/: coordinator.rs  mod.rs
crates/cli/src/tui/coordinator/: events.rs  init.rs  merges.rs  mod.rs  prompts.rs  session.rs  spawning.rs  tracker.rs  workers.rs
crates/core/: Cargo.toml
crates/core/src/: agent_runtime.rs  config.rs  copy.rs  dag.rs  db.rs  hashline.rs  lib.rs  monitor.rs  orchestrator.rs  refinery.rs  roles.rs  scheduler.rs  template.rs  types.rs  worktree.rs
crates/core/src/db/: mod.rs  schema.rs
crates/core/src/orchestrator/: execution.rs  merges.rs  mod.rs  signals.rs  tests.rs  types.rs  workers.rs
crates/desktop/: Cargo.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tauri.conf.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: App.tsx  Backlog.tsx  Explorer.tsx  Settings.tsx  TaskList.tsx  TierBadge.tsx  WorkerPanel.tsx  bridge.rs  index.css  markdown.ts  store.ts  types.ts
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop/src-tauri/capabilities/: default.json
crates/desktop/src-tauri/src/: bridge.rs  lib.rs  main.rs
crates/desktop/ui/: package.json  pnpm-lock.yaml
crates/desktop/ui/src/: App.tsx  TaskList.tsx  WorkerPanel.tsx  index.css  store.ts  types.ts
crates/tui/: Cargo.toml
crates/tui/examples/: chat.rs
crates/tui/src/: canvas.rs  chat.rs  indicator.rs  input.rs  lib.rs  lines.rs  markdown.rs  notify.rs  style.rs  workers.rs
docs/: architecture.md  configuration.md  roadmap.md  roles.md
docs/design/: coordinator-flow.md  roadmap.md
