[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/acp",
    "crates/tui",
    "crates/cli",
    "crates/desktop/src-tauri",
]

[workspace.package]
version = "2026.308.0"
edition = "2024"

[profile.release]
strip = true
lto = true

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

