[package]
name = "enki-acp"
version.workspace = true
edition.workspace = true

[dependencies]
enki-core = { path = "../core" }
agent-client-protocol = "0.9"
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = "6"
chrono = "0.4"
