[package]
name = "enki"
version.workspace = true
edition.workspace = true

[[bin]]
name = "enki"
path = "src/main.rs"

[dependencies]
enki-core = { path = "../core" }
enki-acp = { path = "../acp" }
anyhow = "1"
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
home = "0.5"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
