[package]
name = "enki"
version.workspace = true
edition.workspace = true

[[bin]]
name = "enki"
path = "src/main.rs"

[dependencies]
enki-core = { path = "../core" }
enki-acp = { path = "../acp" }
enki-tui = { path = "../tui" }
anyhow = "1"
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "6"
ignore = "0.4"
nucleo-matcher = "0.3"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ascii-dag = "0.3"
