[package]
name = "enki-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = "0.8"
chrono = { workspace = true }
ulid = { workspace = true }
