[package]
name = "enki-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rand = "0.10"
which = "8"
dirs = "6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
toml = "1"
