[package]
name = "enki-desktop"
version.workspace = true
edition.workspace = true

[[bin]]
name = "enki-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
enki-core = { path = "../core" }
enki-acp = { path = "../acp" }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
