[package]
name = "enki-desktop"
version.workspace = true
edition.workspace = true

[[bin]]
name = "enki-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
enki = { path = "../../cli" }
enki-core = { path = "../../core" }
enki-acp = { path = "../../acp" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
anyhow = "1"
dirs = "6"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
